sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:28: error: Unmatched closing brace '}' ignored here
}
^