sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {
  var echangefait:Boolean = true
  var debut:Int= 0
  var fin:Int=getNombreValeurs()-2
  while (echangefait){
    echangefait= false
    for (i <- debut to fin) 
    {
      if (plusPetit(i+1, i)){
        echange(i, i+1)
        echangefait=true
      }
     
    }
    fin=fin-1
    for (i <- fin to debut by -1) {
      if (plusPetit(i+1, i)){
        echange(i, i+1)
        echangefait=true
      }
  	}
    debut=debut+1
	}
}
}